fixed desktop height cropping

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @media (min-width: 600px) {
   #box {
     width: 50vw;
-    height: 50vh;
   }
 }
 
